<resources>
    <string name="app_name">Android Compoments</string>
    <string name="button">Button</string>
    <string name="common">Common</string>
    <string name="textview">TextView</string>
    <string name="imageview">ImageView</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="click_me">Click Me!</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="fragmentContainerView">FragmentContainerView</string>
    <string name="scrollView">ScrollView</string>
    <string name="switch_txt">Switch</string>
    <string name="text">Text</string>
    <string name="plain_text">Plain Text</string>
    <string name="password">Password</string>
    <string name="buttons">Buttons</string>
    <string name="widgets">Widgets</string>
    <string name="layouts">Layouts</string>
    <string name="containers">Containers</string>
    <string name="helpers">Helpers</string>
    <string name="google">Google</string>
    <string name="legacy">Legacy</string>
    <string name="password_numeric">Password (Numeric)</string>
    <string name="image_button">ImageButton</string>
    <string name="chip_group">ChipGroup</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="chip">Chip</string>
    <string name="radio_group">RadioGroup</string>
    <string name="radio_button">RadioButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="toggle_button">ToggleButton</string>
    <string name="floating_action_button">FloatingActionButton</string>
    <string name="samsung">Samsung</string>
    <string name="nokia">Nokia</string>
    <string name="iphone">Iphone</string>
    <string name="warning">Warning</string>
    <string name="warning_message">You\'re about to exit the app. Are you sure want to exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="array_to_json">Array to JSON</string>
    <string name="spinner">Spinner</string>
</resources>