<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RootCommonActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/text_view_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_bg"
                    android:padding="10dp"
                    android:text="@string/textview"
                    android:textAllCaps="false"
                    android:textColor="#00838F" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_bg"
                    android:padding="10dp"
                    android:text="@string/button"
                    android:textAllCaps="false"
                    android:textColor="#00838F" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_bg"
                    android:padding="10dp"
                    android:text="@string/imageview"
                    android:textAllCaps="false"
                    android:textColor="#00838F" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_bg"
                    android:padding="10dp"
                    android:text="@string/recyclerview"
                    android:textAllCaps="false"
                    android:textColor="#00838F" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:padding="10dp"
                    android:text="@string/fragmentContainerView"
                    android:textAllCaps="false"
                    android:textColor="#00838F" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="64dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_bg"
                    android:padding="10dp"
                    android:text="@string/switch_txt"
                    android:textAllCaps="false"
                    android:textColor="#00838F" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:padding="10dp"
                    android:text="@string/scrollView"
                    android:textAllCaps="false"
                    android:textColor="#00838F" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>