<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonsCheckBoxActivity">

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/samsung_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/samsung"
        app:layout_constraintBottom_toTopOf="@id/nokia_cb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/nokia_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nokia"
        app:layout_constraintBottom_toTopOf="@id/iphone_cb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/samsung_cb" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/iphone_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iphone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nokia_cb" />

</androidx.constraintlayout.widget.ConstraintLayout>